# axum_template

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
config/: default.toml  development.toml  production.toml  test.toml
migrations/2024-01-01-000001_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: database.rs  mod.rs  settings.rs
src/core/: mod.rs  pagination.rs  response.rs
src/core/error/: api_error.rs
src/core/extractors/: auth.rs  validated_json.rs
src/core/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
src/features/_template/: dto.rs  handlers.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  tests.rs
src/features/auth/: dto.rs  handlers.rs  mod.rs  routes.rs  service.rs  tests.rs
src/features/health/: handlers.rs  mod.rs  routes.rs
src/features/users/: dto.rs  handlers.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  tests.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: mod.rs  redis_client.rs
src/infrastructure/email/: client.rs  mod.rs
src/infrastructure/http/: client.rs
src/infrastructure/queue/: client.rs  mod.rs
src/workers/: email_worker.rs  mod.rs
tests/common/: fixtures.rs  mod.rs  test_app.rs
tests/integration/: auth_tests.rs  health_tests.rs  mod.rs  users_tests.rs
