[package]
name = "axum_template"
version = "0.1.0"
edition = "2024"
authors = ["neoko"]
description = "Production-grade Axum web application template"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "request-id",
    "trace",
    "timeout",
    "limit",
] }

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2"

# Identifiers
ulid = { version = "1", features = ["serde"] }

# Authentication
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis & Queue
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Async trait
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
once_cell = "1"

[dev-dependencies]
rstest = "0.24"
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"
fake = { version = "3", features = ["derive"] }
axum-test = "16"

[[bin]]
name = "axum_template"
path = "src/main.rs"

[lib]
name = "axum_template"
path = "src/lib.rs"
